hphp/test/zend/bad/ext/intl/tests/cpbi_getLastCodePoint_error.php
<?php
ini_set("intl.error_level", E_WARNING);

$it = IntlBreakIterator::createCodePointInstance();
var_dump($it->getLastCodePoint(array()));